--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -54,7 +54,7 @@ $on-laptop:        800px !default;
   background: black;
   border-top: 2px solid #444;
   border-bottom: 2px solid #444;
-  padding-top: 4px;
+  padding: 8px 0 4px 0;
 
   .site-nav {
     .page-link {
