--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -92,3 +92,18 @@ $on-laptop:        800px !default;
     color: transparent;
   }
 }
+
+.responsive-video {
+  overflow: hidden;
+  padding-bottom: 56.25%;
+  position: relative;
+  height: 0;
+
+  iframe {
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+  }
+}
