Add Tim&Sascha, and Artül&Kraken; Fix shadow

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -112,15 +112,15 @@ $on-laptop:        800px !default;
 .drop-shadow {
   position: relative;
   width: 200px;
-  height: 160px;
+  height: 100%;
 }
 
 .drop-shadow:before, .drop-shadow:after {
   content: "";
   position: absolute;
   z-index: -1;
-  bottom: 15px;
-  left: 10px;
+  bottom: 14px;
+  left: 4px;
   width: 90%;
   height: 20%;
   box-shadow: 0 15px 10px rgba(0, 0, 0, 0.7);
@@ -128,7 +128,7 @@ $on-laptop:        800px !default;
 }
 
 .drop-shadow:after{
-  right: 10px;
+  right: 4px;
   left: auto;
   transform: rotate(3deg);
 }
