--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -207,6 +207,17 @@ section {
   }
 }
 
+section.looming-notice {
+  font-size: 0.8em;
+  margin: 0 auto 2em auto;
+  padding: 2em;
+  width: 30em;
+  background: rgba(255,255,255,1);
+  box-shadow: 1em 1em 1em #888888;
+  border: 1px solid black;
+  border-radius: 1em;
+}
+
 dl {
   dd, dt {
     display: inline-block;
