Add l8n options & translate landing-page

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -264,3 +264,13 @@ table#schedule {
     padding: 0;
   }
 }
+
+.en:lang(en), .nl:lang(nl) {
+  font-weight: bold;
+}
+
+.language-switcher {
+  position: absolute;
+  right: 2em;
+  top: 8px;
+}
