Update schedule; link to Bueno

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -273,7 +273,7 @@ table#schedule {
   tr &:last-child {
     padding: 0;
   }
-  tr td:last-child {
+  tr td:nth-child(6) {
     text-align: right;
   }
 
@@ -287,4 +287,14 @@ table#schedule {
   position: absolute;
   right: 2em;
   top: 8px;
+}
+
+
+.status {
+  color:white;
+  display:inline-block;
+  background:grey;
+  border-radius:25em;
+  padding:0 0.5em;
+  font-variant:small-caps;
 }
